--- a/style.css
+++ b/style.css
@@ -445,7 +445,7 @@ section .button button:hover{
     color: #28cfe9;
 }
 .skills-details .boxes .per{
-    font-size: 60px;
+    font-size: 40px;
     color: #28cfe9;
     text-shadow: 0 0 5px;
 }
@@ -470,15 +470,15 @@ section .button button:hover{
     box-shadow: 0 5px 5px #28cfe9;
     cursor: default;
     color: white;
-    transition: all 0.2s ease;
+    
 }
 
 .services .boxes .box:hover{
     background-color: #28cfe9;
     color: white;
     cursor: pointer;
-    box-shadow: 0 5px 20px #00ddff;
-    transform: translateY(-5px);
+    box-shadow: 0 5px 20px #00ddffc4;
+
 }
 
 .services .boxes .box .icon{
@@ -491,7 +491,7 @@ section .button button:hover{
     font-size: 18px;
     color: white;
     margin: 0 auto 10px auto;
-    transition: all 0.4 ease;
+
 }
 .boxes .box:hover .icon{
     background-color: white;
@@ -500,7 +500,6 @@ section .button button:hover{
 .services .boxes .box:hover .topic,
 .services .boxes .box:hover p{
     color: white;
-    transition: 0.4 ease;
 }
 
 /*Estilização do contact*/
@@ -630,12 +629,12 @@ footer .text span a:hover{
         flex-direction: column;
     }
     .skills-details .text{
-        width: 100%;
+        width: 20%;
         margin-bottom: 50px;
     }
     .skills-details .boxes{
-        justify-content: center;
-        align-items: center;
+        display: flex;
+        flex-direction: column;
         width: 100%;
     }
     .services .boxes .box{
