--- a/style.css
+++ b/style.css
@@ -455,6 +455,11 @@ section .button button:hover{
     padding-top: 50px;
     padding-bottom: 50px;
 }
+.link-wrapper {
+    text-decoration: none;
+    color: inherit; 
+    display: block; 
+}
 .services .boxes{
     display: flex;
     flex-wrap: wrap;
@@ -463,7 +468,7 @@ section .button button:hover{
 
 .services .boxes .box{
     margin: 10px 0;
-    width: calc(33.33% - 20px);
+    width: calc(50.00% - 20px);
     text-align: center;
     border-radius: 12px;
     padding: 30px 10px;
